# Swifter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
assets/: README.md
assets/levels/: index.txt  level1.txt  level2.txt  level3.txt
include/core/: Config.h  GameContext.h  GameObject.h  Math.h  Random.h  ResourceManager.h
include/data/: LevelLoader.h
include/game/: GameOverState.h  LevelSelectState.h  MenuState.h  PauseState.h  PlayState.h  StateMachine.h
include/managers/: LevelManager.h  ObjectManager.h  ScoreManager.h  UIManager.h
include/objects/: Boss.h  Effect.h  Enemy.h  NormalEnemy.h
src/: main.cpp
src/core/: Game.cpp  GameContext.cpp  GameObject.cpp  Input.cpp  Math.cpp  Random.cpp  ResourceManager.cpp  Time.cpp  Types.cpp
src/data/: LevelData.cpp  LevelLoader.cpp
src/game/: GameOverState.cpp  GameState.cpp  LevelSelectState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  StateMachine.cpp
src/managers/: AudioManager.cpp  CollisionManager.cpp  LevelManager.cpp  ObjectManager.cpp  ScoreManager.cpp  UIManager.cpp
src/objects/: Boss.cpp  Bullet.cpp  Bullet.h  Effect.cpp  Effect.h  Enemy.cpp  Item.cpp  Item.h  NormalEnemy.cpp  Player.cpp  Player.h  ShooterEnemy.cpp  ShooterEnemy.h
